--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(cat)
 
 add_executable(cat main.cpp)
-target_link_libraries(cat reader)
+target_link_libraries(cat reader logger)
+target_include_directories(cat PUBLIC ../include)
