Concatenate files and create menu

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(cat)
 
-add_executable(cat main.cpp)
+add_executable(cat main.cpp argParser.cpp menu.cpp)
 target_link_libraries(cat reader logger)
 target_include_directories(cat PUBLIC ../include)
